--- a/code/texas_equity_code.Rmd
+++ b/code/texas_equity_code.Rmd
@@ -55,7 +55,7 @@ student testing outcomes are analyzed.
 Once you have identified analyses that you want to try to replicate or modify,
 click the "Download" buttons to download R code and sample data. You can make
 changes to the charts using the code and sample data, or modify the code to work
-with your own data. If you are familiar with Github, you can click "Go to
+with your own data. If you are familiar with GitHub, you can click "Go to
 Repository" and clone the entire repository to your own computer.
 
 Go to the Participate page to read about more ways to engage with the OpenSDP
@@ -74,7 +74,7 @@ student ID, gender, race-ethnicity, economic disadvantage level, Limited English
 Proficiency level, and scale scores in reading, math, and writing (for the STAAR
 state test). We also used indicators of whether or not the student attended a
 Title 1 school, was a migrant, and was enrolled in special education. Here is a
-key of the features and their variable names in our simulated dataset:
+key of the features and their variable names in our simulated data set:
 
 | Feature name    | Feature Description                                 |
 |:-----------     |:------------------                                  |
@@ -99,7 +99,7 @@ could get unwieldy, so the best practice is to select the key features we will
 need for our analyses. If you would like to directly use your own data with the
 code from this guide, it is best to delete unecessary features and change the
 headers to the feature names we chose (above). A more detailed data definition
-guide can be found in the `man` folder in the Github repository.
+guide can be found in the `man` folder in the GitHub repository.
 
 Although not required, it is useful to compile a small table of the standard
 deviations of the scores on the exams statewide, broken down by grade and
@@ -113,13 +113,13 @@ exams:
 This standard deviation table is used in the code, specifically imported into
 the `sd.table` variable.
 
-#### Loading the OpenSDP Dataset and R Packages
+#### Loading the OpenSDP Data set and R Packages
 
-This guide takes advantage of the OpenSDP synthetic dataset and several key R
+This guide takes advantage of the OpenSDP synthetic data set and several key R
 packages. The first chunk of code below loads the R packages (make sure to
-install first!), and the second chunk loads the dataset and provides us with
+install first!), and the second chunk loads the data set and provides us with
 variable labels. You can change the variable labels depending on the variables
-in your dataset.
+in your data set.
 
 ```{r packages, eacho=FALSE}
 #Packages
@@ -167,7 +167,7 @@ about them.
 
 ### Giving Feedback on this Guide
  
-This guide is an open-source document hosted on Github and generated using R
+This guide is an open-source document hosted on GitHub and generated using R
 Markdown. We welcome feedback, corrections, additions, and updates. Please visit
 the OpenSDP equity metrics repository to read our contributor guidelines.
 
@@ -197,7 +197,7 @@ analysis.
 
 **Ask Yourself**
 
-- How do different study subpopulations in your organization perform on standardized tests?
+- How do different study sub-populations in your organization perform on standardized tests?
 - Which differences do you want to explore further?
 
 **Analytic Technique:** Identify major achievement gaps within the student
@@ -215,16 +215,16 @@ Inputs:
 
 `gap.test(df, grade, outcome, features, n = 3, sds = NULL, comp = FALSE, cut = NULL, med = FALSE, outlbl = NULL)`
 
-- df = dataset, should be wide format, one row per student, and have column for grade level (class: data frame)
-- grade = name of tested grade column in dataset (class: character)
-- outcome = name of outcome variable (usually test scores) in dataset (class: character)
-- features = vector of features in dataset where testing for gaps (class: character)
+- df = data set, should be wide format, one row per student, and have column for grade level (class: data frame)
+- grade = name of tested grade column in data set (class: character)
+- outcome = name of outcome variable (usually test scores) in data set (class: character)
+- features = vector of features in data set where testing for gaps (class: character)
 - n (optional) = Number of largest gaps the function outputs (class: integer, default: 3)
 - sds (optional) = dataframe containing the state-wide standard deviations for all outcomes/exams (class: data frame, default: NULL)
 - comp (optional) = Indicator to output additional comparative gap graphics (class: boolean, default: FALSE)
 - cut (optional) = Minimum number of students for level in a gap (class: integer, default: NULL)
 - med (optional) = Indicator if would like function to also output standardized difference of medians, in addition to effect size (class: boolean, default: FALSE)
-- outlbl (optional) = label for measurd outcome, to print on graphs (class: character, default: NULL)
+- outlbl (optional) = label for measured outcome, to print on graphs (class: character, default: NULL)
 
 More detailed usage information can be found in the `R` folder in the GitHub
 repository. We use the function here to find the top 3 gaps in math scores, in
@@ -251,8 +251,8 @@ for 3rd, 4th, and 5th grade math scores between gender groups. The effect sizes
 are negative, and the labeling on the graph shows us the effect size was
 calculated with the average score for male "M" students subtracted from the
 average score for female "F" students. Thus, on average, the male students
-scored higher than female students. In our dataset, these gaps were wider than
-any other gap based in racial differences, socioeconoimc differences,
+scored higher than female students. In our data set, these gaps were wider than
+any other gap based in racial differences, socioeconomic differences,
 differences in English proficiency status, or differences in special education
 status.
 
@@ -261,7 +261,7 @@ show the gap on the scale of the test), and demographic information of the gap
 (groups affected, grade level, test subject). We have stored this as
 `gap.table`. If wanted, the user could set the inputs (see usage information
 above) of the function such that it outputs additional graphics, comparing gaps
-within each dataset feature. Here, we output one graphic for simplicity.
+within each data set feature. Here, we output one graphic for simplicity.
 
 Measuring the gaps in terms of effect size allows us to compare gaps across
 grade levels and subject areas, as effect size standardizes the gap by taking
@@ -274,7 +274,7 @@ our data surpass this threshold and are similar across grade levels. For
 simplicity, this report will focus on one grade level, but the following
 analyses can be done across grade levels.
 
-One technical note: Sometimes the distibutions of test scores can be skewed,
+One technical note: Sometimes the distributions of test scores can be skewed,
 making the median a more advantageous measure of central tendency (since it is
 less sensitive to outliers and skew). In these cases, set the `gap.test`
 function's `med` parameter to `TRUE` to output a plot that shows the top 3 gaps
@@ -284,7 +284,7 @@ Since our largest effect size gap was the grade 3 gender gap on the standardized
 math test, we will explore that gap further. For demonstration purposes, we will
 focus on just that one gap here. However, the next chunk of code will determine
 which gap(s) will be explored in the rest of our analyses. The user can explore
-multipe gaps at once by setting the following variables to include multiple gaps
+multiple gaps at once by setting the following variables to include multiple gaps
 from `gap.table`. This is shown in commented out code in the middle of the
 chunk.
 
@@ -334,7 +334,7 @@ for(i in 1:n.gaps){
 ```
 
 One particularly useful output in this summary is that we see the minimum and
-maximum scores in our dataset, which gives us a rough sense of the bounds for
+maximum scores in our data set, which gives us a rough sense of the bounds for
 scores on this type of exam. It is tough to get a sense of the shape of the
 distribution from summary statistics alone, so we will turn to visualization.
 
@@ -475,7 +475,7 @@ etc.) can elucidate further achievement gaps in the data. Here, we will explore
 the intersection of socioeconomic status (measured by economic disadvantage) and
 the gender gap in math, by measuring the gender gap within each level of
 socioeconomic status in our data. For example, in this context, the gender gap
-may be heightened among econoimcally advantaged students but may not be present
+may be heightened among economically advantaged students but may not be present
 among economically disadvantaged students. Such a distinction could influence
 target populations for possible interventions.
 
@@ -570,7 +570,7 @@ subgroups.
 ### Comparing gaps at schools
 
 **Purpose:** When you already have a sense of which gaps are greatest in
-magnitude throughout the dataset, it can be useful to pinpoint at which schools
+magnitude throughout the data set, it can be useful to pinpoint at which schools
 the gaps are most exaggerated (and at which schools the gaps are most narrow).
 Identifying these schools can lead to further investigation, providing context
 as to why these variations exist.
@@ -599,7 +599,7 @@ tendency in such cases.
 Note: we standardize the median differences here by utilizing the state standard
 deviations on these exams (stored in `sd.table`). If these standard deviations
 are not available, as a stand-in, you can calculate the standard deviation
-within the dataset you provide. There is commented out code within the chunk
+within the data set you provide. There is commented out code within the chunk
 that you can activate to complete this task.
 
 ```{r SchoolGaps, echo=TRUE}
@@ -675,12 +675,12 @@ for(i in 1:n.gaps){
 ```
 
 A common reaction to the above graphic is to wonder if the schools with the
-greatest magnitude gaps--such as school number 8 in our data--is discriminitory
+greatest magnitude gaps--such as school number 8 in our data--is discriminatory
 towards female students (in terms of math education). However, such a claim
 would require further analyses beyond the scope of this report.
 
 First, it would be helpful to explore the size of each of these schools. Often,
-district datasets include small programs that are labeled with their own school
+district data sets include small programs that are labeled with their own school
 codes. School 8 may be, for example, a program with only 20 students. With such
 a small sample size, an exaggerated gap could be due to noise in the data.
 
@@ -689,7 +689,7 @@ schools. For example, school 8 may be a selective arts program, in which most of
 the students enrolled for performance art are female and most enrolled for music
 are male. In such a case, there may be a selection bias, as aspiring performance
 artists may focus on math less in their education than music students, who study
-rhythmn and theory. Due to selection bias, this could show up in our analysis as
+rhythm and theory. Due to selection bias, this could show up in our analysis as
 a gender gap.
 
 Ideally, both qualitative (observational) and quantitative assessment could be
@@ -731,7 +731,7 @@ our target population (here, female students). This will give us a sense of
 where students from our target student population are performing relatively
 poorly compared to their peers at other schools. Again, we choose the medians
 here because they are less susceptible to skew and outliers. We will visualize
-these medians with bar charts, and we will visualize the three lowest peforming
+these medians with bar charts, and we will visualize the three lowest performing
 schools with comparative box plots.
 
 ```{r MedianTargets, echo=TRUE}
@@ -966,20 +966,20 @@ populations.
 **Ask Yourself**
 
 - Can we draw causal estimates from this type of analysis, or is it only
-correlatoinal?
+correlational?
 - How do we best choose what controls we use in our equations?
 
 **Analytic Technique:** Perform multiple regression. We choose multiple
 regression because our outcome variable (scale scores on tests) is approximately
-continuous, and the technique will allow us to come up with our correlatoin
+continuous, and the technique will allow us to come up with our correlation
 estimates while controlling for various factors. Note: the user will have to set
 the variable for which s/he would like to control. Many combinations are
 possible, and we make the following specific recommendations (the code will
 default to these recommendations):
 
-- If analyzing race gaps, control for socioeconomic level and english proficiency status.
+- If analyzing race gaps, control for socioeconomic level and English proficiency status.
 - If analyzing gender gaps, control for race and socioeconomic level.
-- If analyzing socioeconomic gaps, control for race and english proficiency status.
+- If analyzing socioeconomic gaps, control for race and English proficiency status.
 
 In the code block below, there is space to override these defaults if you would
 like to control for other factors in combinations other than the ones listed
@@ -1139,9 +1139,9 @@ for(i in 1:n.gaps){
 }#End loop over gap number
 ```
 
-The gender gap, as demonstrated by the regression coefficent values visualized
+The gender gap, as demonstrated by the regression coefficient values visualized
 as bars above, remains highly consistent, even after controlling for
-race-ethnicity and economic disadvantage level in our dataset. In the regression
+race-ethnicity and economic disadvantage level in our data set. In the regression
 equations, the coefficient remains highly significant (p < 0.0001). Therefore,
 we know that the gap cannot be explained by variation due to race or economic
 disadvantage level.
