--- a/code/texas_equity_code.Rmd
+++ b/code/texas_equity_code.Rmd
@@ -1263,8 +1263,8 @@ for(i in 1:n.gaps){
   #  Extract the coefficients
   betas_unadj <- tidy(mod1)
   #  Get the clustered variance-covariance matrix
-  #  Use the get_CL_vcov function from the functions.R script
-  clusterSE <- get_CL_vcov(mod1, data$cluster_var)
+  #  Use the get_cluster_vcov function from the functions.R script
+  clusterSE <- get_cluster_vcov(mod1, data$cluster_var)
   #  Get the clustered standard errors and combine with the betas
   betas_unadj$std.error <- sqrt(diag(clusterSE))
   betas_unadj <- betas_unadj[, 1:3]
@@ -1274,7 +1274,7 @@ for(i in 1:n.gaps){
   # Estimate score gap adjusting for first control
   mod2 <- lm(data[,subject] ~ data[,dem] + data[,control.1])
   betas_adj_control_1 <- tidy(mod2)
-  clusterSE <- get_CL_vcov(mod2, data$cluster_var)
+  clusterSE <- get_cluster_vcov(mod2, data$cluster_var)
   betas_adj_control_1$std.error <- sqrt(diag(clusterSE))
   betas_adj_control_1 <- betas_adj_control_1[, 1:3]
   betas_adj_control_1$model <- paste("B: Gap adjusted for", labels[control.1])
@@ -1282,7 +1282,7 @@ for(i in 1:n.gaps){
   # Estimate score gap adjusting for second control
   mod3 <- lm(data[,subject] ~ data[,dem] + data[,control.2])
   betas_adj_control_2 <- tidy(mod3)
-  clusterSE <- get_CL_vcov(mod3, data$cluster_var)
+  clusterSE <- get_cluster_vcov(mod3, data$cluster_var)
   betas_adj_control_2$std.error <- sqrt(diag(clusterSE))
   betas_adj_control_2 <- betas_adj_control_2[, 1:3]
   betas_adj_control_2$model <- paste("C: Gap adjusted for", labels[control.2])
@@ -1290,7 +1290,7 @@ for(i in 1:n.gaps){
   # Estimate score gap adjusting for both controls
   mod4 <- lm(data[,subject] ~ data[,dem] + data[,control.1] + data[,control.2])
   betas_adj_all <- tidy(mod4)
-  clusterSE <- get_CL_vcov(mod4, data$cluster_var)
+  clusterSE <- get_cluster_vcov(mod4, data$cluster_var)
   betas_adj_all$std.error <- sqrt(diag(clusterSE))
   betas_adj_all <- betas_adj_all[, 1:3]
   betas_adj_all$model <-  paste("D: Gap adj for", 
