--- a/docs/student_assessment_equity_analysis.Rmd
+++ b/docs/student_assessment_equity_analysis.Rmd
@@ -359,14 +359,13 @@ measured.
 
 ```{r GapTest, echo=TRUE}
 #Use 'gap.test' function to explore most major gaps in student population
-gap.table <- gap.test2(df = test_data,
+gap.table <- gap.test(df = test_data,
                     grade = "grade_level",
                     outcome = "math_ss",
                     features = c('eco_dis','lep','iep','race_ethnicity','male'),
                     sds = sd_table,
                     n = 3,
-                    cut = 120,
-                    outlbl = "math score gap")
+                    cut = 120)
 ```
 
 The `gap.test` output shows us that the top 3 gaps, in terms of effect size, are
@@ -379,12 +378,16 @@ any other gap based in racial differences, socioeconomic differences,
 differences in English proficiency status, or differences in special education
 status.
 
+```{r}
+autoplot.gap_test(gap.table)
+```
+
+
 The function also outputs a table with each effect size, mean difference (to
 show the gap on the scale of the test), and demographic information of the gap
 (groups affected, grade level, test subject). We have stored this as
 `gap.table`. If wanted, the user could set the inputs (see usage information
-above) of the function such that it outputs additional graphics, comparing gaps
-within each data set feature. Here, we output one graphic for simplicity.
+above) of the function such that it outputs additional effect size calculations.
 
 Measuring the gaps in terms of effect size allows us to compare gaps across
 grade levels and subject areas, as effect size standardizes the gap by taking
@@ -400,8 +403,10 @@ analyses can be done across grade levels.
 One technical note: Sometimes the distributions of test scores can be skewed,
 making the median a more advantageous measure of central tendency (since it is
 less sensitive to outliers and skew). In these cases, set the `gap.test`
-function's `med` parameter to `TRUE` to output a plot that shows the top 3 gaps
+function's `med` parameter to `TRUE` to output a table that identifies the top 3 gaps
 as measured by the standardized median difference.
+
+### Investigate Individual Gaps
 
 Since our largest effect size gap was the grade 3 gender gap on the standardized
 math test, we will explore that gap further. For demonstration purposes, we will
@@ -560,7 +565,7 @@ hypothesis directly by looking at shapes through visualization.
 and shape in these gaps. To do so, we will use both box plots broken down by
 gender and a stacked histogram broken down by gender.
 
-```{r VisualizeEcoDis, echo=TRUE}
+```{r VisualizeGenderGap, echo=TRUE}
 # // Step 1: Initialize a set of distinguishable colors for graphics
 colors <- c("red","dodgerblue3","green","coral","violet","burlywood2","grey68")
 
